// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/app/reducers/user should handle changeActiveLocationId 1`] = `
Object {
  "activeLocationId": "l-1",
}
`;

exports[`/app/reducers/user should handle changeActiveLocationId with no payload 1`] = `
Object {
  "activeLocationId": "l-2",
}
`;

exports[`/app/reducers/user should not change state with loadLocationsSuccess when not logged in 1`] = `
Object {
  "_id": "u-1",
  "activeLocationId": false,
  "isLoggedIn": false,
}
`;

exports[`/app/reducers/user should reduce a loadLocationsSuccess 1`] = `
Object {
  "_id": "u-1",
  "activeLocationId": "l-1",
  "isLoggedIn": true,
}
`;

exports[`/app/reducers/user should reduce a logout failure 1`] = `
Object {
  "isLoggedIn": false,
  "status": "failed",
}
`;

exports[`/app/reducers/user should reduce a logout request 1`] = `
Object {
  "isLoggedIn": false,
  "status": "logout",
}
`;

exports[`/app/reducers/user should reduce a logout success 1`] = `
Object {
  "isLoggedIn": false,
  "status": "logout",
}
`;

exports[`/app/reducers/user should reduce a missing location 1`] = `
Object {
  "_id": "u-1",
  "activeLocationId": false,
  "isLoggedIn": true,
}
`;
